--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -6,7 +6,7 @@
   justify-content: center;
 
   .card {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: row-reverse;
     background-color: white;
@@ -17,7 +17,7 @@
     .left {
       flex: 1;
       background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.5)),
-        url("https://images.pexels.com/photos/4881619/pexels-photo-4881619.jpeg?auto=compress&cs=tinysrgb&w=1600")
+        url("https://images.pexels.com/photos/3131971/pexels-photo-3131971.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")
           center;
       background-size: cover;
       padding: 50px;
@@ -70,6 +70,15 @@
         border: none;
         border-bottom: 1px solid lightgray;
         padding: 20px 10px;
+        }
+
+        .error{
+          color: red;
+        }
+
+        .success
+        {
+          color : green;
         }
         
         button {
